--- a/src/README
+++ b/src/README
@@ -1,5 +1,4 @@
-This directory houses the Weather Prediction Center (WPC) sample scripts to be used to develop the METplus python plotting 
-for the MET Mode Time Domain output.
+This directory houses the Weather Prediction Center (WPC) sample scripts to be used to develop the METplus python plotting for the MET Mode Time Domain output.
 
 
 
