--- a/metplotpy/contributed/grid_to_grid/README
+++ b/metplotpy/contributed/grid_to_grid/README
@@ -50,10 +50,10 @@ set your PYTHONPATH to point to your $USER/METplotpy directory
 run the following on the command line:
 python plot_grid_to_grid.py grid.yaml
 
-The simplest way to run the script is to cd to the directory METplotpy/src/grid_to_grid/
+The simplest way to run the script is to cd to the directory METplotpy/metplotpy/contributed/grid_to_grid/
 and enter the following;
 
-python plot_grid_to_grid.py
+python plot_grid_to_grid.py grid.yaml
 
 You will see output messages such as the name of the png files that are being created. The files are saved to the output directory 
 that was specified in the script.  
