--- a/metplotpy/contributed/wpc/README
+++ b/metplotpy/contributed/wpc/README
@@ -1,14 +1,16 @@
 These are scripts from Mike Erickson at the Weather Prediction Center (WPC) for Practically Perfect and MET mode time domain plotting:
 
-    convertNEWSe20182nc.py  
     ERO_verif_s_vday1.py  
-    loadAllEROData.py  
-    METLoadEnsemble_NEW.py
-    mtd_retroruns_save_NEWSeTEST.py
     ERO_verif_p_vday1.py 
-    get_NEWSe_PAT2018.csh 
+    loadAllEROData.py  
+    
     METConFigGen.py
+    METLoadEnsemble.py
     METPlotEnsemble.py
+    
+    mtd_master_save_type1.py
+    mtd_master_save_type2.py
+    mtd_master_plot.py
     py2netcdf.py
 
 
