Hint for running via command line

--- a/test/performance_diagram/README
+++ b/test/performance_diagram/README
@@ -1,2 +1,4 @@
-Running from command line, set your PYTHONPATH to
-$METplotpyDir/metplotpy:$METplotpyDir/metplotpy/plots:$METplotpyDir/metplotpy/plots/performance_diagram
+set the PYTHONPATH to the following, if running via command line:
+/Users$INSTALL_DIR/METplotpy:$INSTALL_DIR/METplotpy/metplotpy:$INSTALL_DIR/METplotpy/metplotpy/plots:/$INSTALL_DIR/METplotpy/metplotpy/plots/performance_diagram
+
+
