Added a note to the README about which line options are supported, as per the error message I recieved when I used an unsupported value (I didn't see the explanation in the config file at first)  -- if not all of these values are actually appropriate, adjust this message as needed.

--- a/metplotpy/plots/skew_t/README
+++ b/metplotpy/plots/skew_t/README
@@ -28,7 +28,7 @@ casper:/glade/work/jvigh/HFIP-EnsRI/data_output/DIAGNOSTICS/TCDIAG
 Customizations:
 3) You can customize the appearance of the temperature and dewpoint lines:
    temp_line_color: red
-   temp_line_style: '-'
+   temp_line_style: '-'       NOTE: supported values are '-', '--', '-.', ':', 'None', ' ', '', 'solid', 'dashed', 'dashdot', 'dotted'
    temp_line_thickness: 2
 
    dewpt_line_color: green
